@@ -14,6 +14,7 @@ Version 1.0.3 to be released
 - New: Upgraded jquery to 1.3.1 (Qiang)
 - New: Upgraded jquery star rating to 2.61 (Qiang)
 - New: Added skeleton application and refactored 'yiic webapp' command (Qiang)
+- New: Added 'expression' option to access rules (Qiang)
 
 
 Version 1.0.2 February 1, 2009
